Make discovery-run comparison keys locale-stable (#692)
Use Locale.ROOT for canonical comparison keys and isolate the formatting-locale regression test.